--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <script href="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
