--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button">Reset</button>
+    <button id="reset" type="button">Reset</button>
     <div id="container"></div>
     <script src="scripts.js"></script>
 </body>
